# OS_lab3

./: CMakeLists.txt  main.cpp  marker.cpp  marker.h
tests/: test_marker.cpp
